changes on style

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
   margin: 0;
+  width: 300px;
+  text-align: center;
+  margin-left: 80px;
 }
 
 p {
@@ -36,7 +39,6 @@ p {
   background-color: rgb(148, 148, 148);
   width: 130px;
   height: 90px;
-  border-radius: 80px;
   color: black;
   font-size: 20px;
   font-weight: bold;
